--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongo_logger",
+  "name": "mongodb_logger",
   "version": "1.0.0",
   "description": "The most powerful mongo logger package",
   "main": "logger.js",
@@ -9,7 +9,11 @@
   "repository": {
 		"type": "git",
 		"url": "https://github.com/hossamt93/mongo_logger.git"
+  },
+	"bugs": {
+		"url": "https://github.com/hossamt93/mongo_logger/issues"
 	},
+	"homepage": "https://github.com/hossamt93/mongo_logger/blob/master/README.md",
 	"keywords": [
 		"mongo",
 		"mongodb",
